ui/assets/css/index.css
@import 'normalize.css';

/** Base Styles **/
body {
  background-color: #fffffa;
  display: flex;
  flex-direction: column;
  font-size: 16px;
  line-height: 1.4;
  min-height: 100vh;
}
a {
  text-decoration: none;
}
li {
  list-style: none;
}
.logo {
  width: 100px;
}
button {
  cursor: pointer;
}

/** Custom Component Styles **/
.btn {
  background-color: #f4511e;
  border: none;
  border-radius: 4px;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-size: 20px;
  margin: 5px;
  padding: 20px;
  text-align: center;
  transition: all 0.5s;
  width: 200px;
}

.column {
  display: flex;
  justify-content: space-between;
}

.icon-circle {
  width: 60px;
  height: 60px;
  border-radius: 60px;
  background: greenyellow;
  color: #fffffa;
  display: block;
  line-height: 60px;
  text-align: center;
  font-size: 1.5em;
  font-weight: 600;
}

/** Header Styles **/
header {
  box-shadow: 0px 4px 4px rgba(159, 155, 155, 0.25);
}
.navbar {
  display: flex;
}
.navbar-logo {
  padding: 12px 40px;
}
.navbar-menu {
  display: flex;
  margin-left: auto;
  padding: 0 40px;
}
.navbar-link {
  display: inline;
}
.navbar-link a {
  display: block;
  padding: 26px 15px;
}

/** Hero Styles **/
.hero {
  align-items: center;
  background-image: url(../images/randy-tarampi-1323085-unsplash.jpg);
  background-position: center top;
  background-size: cover;
  color: aliceblue;
  display: flex;
  flex-direction: column;
  height: calc(100vh - 74px);
  justify-content: center;
  padding: 40px 80px;
  transition: all 0.7s ease-in-out;
}
.hero-title,
.hero-paragraph {
  margin-bottom: 40px;
}
.hero-title {
  font-size: 2.3em;
  text-transform: uppercase;
}
.hero-paragraph {
  font-size: 1.1em;
}
.btn-home span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}
.btn-home span:after {
  content: '\00bb';
  opacity: 0;
  position: absolute;
  right: -20px;
  top: 0;
  transition: 0.5s;
}
.btn-home:hover span {
  padding-right: 20px;
}
.btn-home:hover span:after {
  opacity: 1;
  right: 0;
}

/** Homepage Sections Styles **/
section {
  padding: 40px;
  display: flex;
  flex-direction: column;
}
section > .btn {
  align-self: center;
}
.section-title {
  display: inline-block;
}
.section-title,
.section-text {
  position: relative;
  margin-bottom: 15px;
}
.section-title::after {
  content: "";
  position: absolute;
  bottom: -3px;
  left: 0;
  width: 60px;
  border: 1.5px solid green;
}
.features {
  display: flex;
  justify-content: space-between;
}
.feature-item {
  flex-basis: 50%;
  flex-direction: column;
  padding: 20px 50px;
  justify-content: start;
}
.column .icon-circle {
  align-self: center;
  margin-bottom: 20px;
}
/** Featured Reports Styles **/
.featured-reports {
  margin-top: -50px;
  background: #dfe0e2;
  clip-path: polygon(0 10%, 100% 35%, 100% 100%, 0% 100%);
  padding-top: 110px;
}
.sectioned {
  background: sienna;
}
.sectioned .section-title,
.sectioned .section-text {
  color: #fffffa;
}

/** Footer Styles **/
footer {
  justify-content: start;
  background-color: #f4511e;
  display: flex;
}
.footer-callout {
  padding: 5px;
  margin-right: 35px;
}
.footer-logo {
  width: 150px;
}
.footer-img {
  height: 100%;
  width: 100%;
  object-fit: contain;
}
.footer-links {
  padding: 5px;
}
.footer-links > ul {
  margin: 2px;
}
.social-list {
  text-align: center;
}
.social-list > li {
  display: inline-block;
  margin: 0 0.5em;
}

